--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -11,5 +11,10 @@
 
     <!-- Insert Your Form Below -->
 
+    <form class="" action="/food" method="POST">
+      <p>Your Name: <input type="text" name="name" value=""></p>
+      <p>Your Favorite Food: <input type="text" name="favorite_food" value=""></p>
+      <p><input type="submit"></p>
+    </form>
   </body>
 </html>
